Add ScannerList and ImagePicker

--- a/OCRscanner/SupportingFiles/Info.plist
+++ b/OCRscanner/SupportingFiles/Info.plist
@@ -20,6 +20,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>Media library usage required to collect pictures for OCR.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Camera usage required to collect pictures for OCR.</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
